lib/tests/fixtures/compiler/evaluation/func_bad_type.baseline
Notice: Scope(Class[main]): peter
Error: func_bad_type.pp:6:6: node 'test': parameter $x has expected type String but was given Integer[5, 5].
  test(5)
       ^
  backtrace:
    in '<class main>' at func_bad_type.pp:6
