lib/tests/fixtures/compiler/evaluation/func_bad_type.pp
function test(String $x) {
    notice $x
}

test(peter)
test(5)
